--- a/Pipfile
+++ b/Pipfile
@@ -24,8 +24,8 @@ sphinx-rtd-theme = "*"
 # All other package requirements from setup.cfg
 odinprocserv = {editable = true,path = "."}
 softioc = "*"
-cothread = "*"
 pyyaml = "*"
+aioca = "*"
 
 [scripts]
 tests = "python -m pytest"
