Update to aioca 1.2 to fix caput issue
- Reset PV values after put so it works more than once

--- a/Pipfile
+++ b/Pipfile
@@ -25,7 +25,7 @@ sphinx-rtd-theme = "*"
 odinprocserv = {editable = true,path = "."}
 softioc = "*"
 pyyaml = "*"
-aioca = "*"
+aioca = "==1.2"
 
 [scripts]
 tests = "python -m pytest"
