--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = odinprocserv
+name = odinprocservcontrol
 description = One line description of your module
-url = https://github.com/dls-controls/odinprocserv
+url = https://github.com/dls-controls/odinprocservcontrol
 author = Gary Yendell
 author_email = gary.yendell@diamond.ac.uk
 license = Apache License 2.0
@@ -32,7 +32,7 @@ exclude = tests
 [options.entry_points]
 # Include a command line script
 console_scripts =
-    odinprocserv = odinprocserv.cli:main
+    odinprocservcontrol = odinprocservcontrol.cli:main
 
 [mypy]
 # Ignore missing stubs for modules we use
@@ -55,7 +55,7 @@ extend-ignore =
 # Run pytest with all our checkers, and don't spam us with massive tracebacks on error
 addopts =
     --tb=native -vv --flake8 --black --mypy --doctest-modules --doctest-glob="*.rst"
-     --cov=odinprocserv --cov-report term --cov-report xml:cov.xml
+     --cov=odinprocservcontrol --cov-report term --cov-report xml:cov.xml
 
 [coverage:run]
 # This is covered in the versiongit test suite so exclude it here
