WIP - Tests run and fail

--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,7 @@ odinprocservcontrol = {editable = true,path = "."}
 softioc = "*"
 pyyaml = "*"
 aioca = "==1.2"
+pytest-mock = "*"
 
 [scripts]
 tests = "python -m pytest"
