--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = odinprocservcontrol
-description = One line description of your module
+description = A pythonSoftIOC to restart procServ Odin processes in a logical way
 url = https://github.com/dls-controls/odinprocservcontrol
 author = Gary Yendell
 author_email = gary.yendell@diamond.ac.uk
