--- a/setup.cfg
+++ b/setup.cfg
@@ -16,9 +16,32 @@ classifiers =
 
 [options]
 packages = find:
-# install_requires =
-#     numpy
-#     scipy
+install_requires =
+    softioc
+    aioca >=1.2
+    pyyaml
+    sphinx-rtd-theme
+
+[options.extras_require]
+dev =
+    pytest
+    pytest-mock
+    pytest-asyncio
+    pytest-cov
+    pytest-mypy
+    pytest-flake8
+    pytest-black
+    mock
+    mypy
+    types-pyyaml
+    types-mock
+    isort >5.0
+    flake8
+    flake8-isort
+    black ==19.10b0
+    atomicwrites
+    typing-extensions
+    importlib-metadata
 
 # If you want to include data files in packages,
 # either define [options.package_data] or
